added css and updated js and html

--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Abel', sans-serif;
+  background: #606c88;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3f4c6b, #606c88); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: white;
+}
+ main {
+   display: block;
+   position: relative;
+ }
+
+fieldset {
+  border: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ @media screen
+   and (max-width: 480px) {
+   main {
+     margin-top: 5px;
+   }
+ }
