--- a/style.css
+++ b/style.css
@@ -58,8 +58,9 @@ input.js-query::-webkit-input-placeholder {
   color: white;
   font-weight: bold;
   align-content: center;
-  background-color: #598381;
-  border: 1px solid #598381;
+  border-radius: 3px;
+  background-color: #333;
+  border: 1px solid #333;
   cursor: pointer;
 }
 
@@ -75,19 +76,29 @@ input.js-query::-webkit-input-placeholder {
 
 button#submit {
   position: relative;
-  border: 1px solid #598381;
+  border: 1px solid #333;
   border-radius: 0 3px 3px 0;
   padding: 0;
   height: 30px;
   width: 45px;
   color: #fff;
-  background: #598381;
+  background: #333;
   margin-bottom: 10px;
   margin-left: -5px;
+  cursor: pointer;
 }
 
 fieldset {
   border: none;
+}
+
+label {
+  font-size: 1.1em;
+  font-weight: 700;
+}
+
+input.js-query:focus {
+  background-color: #EEE8AA;
 }
 
 .js-search-results {
@@ -117,7 +128,7 @@ img {
   text-overflow: ellipsis;
   white-space: nowrap;
   padding: 0 10px;
-  color: #598381;
+  color: #333;
 }
 
 .result {
